@@ -67,3 +67,4 @@
 * Added ORDER, LIMIT, OFFSET and WHERE support to AdvancedLoadCommand
 * Renamed spec/has_many.rb to spec/has_many_spec.rb
 * Tweaked the loading of has_many relationships; big performance boost; got rid of an extra query
+* Added EmbeddedValue support, and accompanying spec
